--- a/index.html
+++ b/index.html
@@ -71,14 +71,10 @@
     <h1>FPLPulse</h1>
     <p>Live FPL insights. Track live points, spot price changes early, and make smarter transfer decisions. Join our waitlist for early access.</p>
     
-    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+    <form action="https://formspree.io/f/xzzvwwrv" method="POST">
       <input type="email" name="email" placeholder="Enter your email" required />
-      <button type="submit">Join the Waitlist</button>
+      <button type="submit">Join the FPL League</button>
     </form>
-    
-    <div class="fineprint">
-      No spam — just launch updates and early access invites.
-    </div>
   </div>
 </body>
 </html>
